fix text wrap under cover search results

--- a/gutenberg/gutenberg-globals.css
+++ b/gutenberg/gutenberg-globals.css
@@ -2834,7 +2834,7 @@ ul.results li {
 }
 
 ul.results li a.link {
-  display: block;
+  display: flex;
   text-decoration: none;
 }
 
